Last minor tweaks to make sure the info box isn't cropped out on mobile

--- a/site-lib/styles/theme.css
+++ b/site-lib/styles/theme.css
@@ -172,7 +172,7 @@ body {
 
 /* ------ Frontmatter ------ */
 body {
-  --infobox-width: 26%;
+  --infobox-width: 33%;
   --infobox-margin: 1em 0px 1em 1em;
   --infobox-margin-left: 1em 1em 1em 0px;
 }
